--- a/holyGrail/lib/css/style.css
+++ b/holyGrail/lib/css/style.css
@@ -27,17 +27,26 @@ nav a:hover{
 
 /* PUT YOUR CSS HERE */
 .main_container{
-
+display:flex;
+flex-direction: column;
+height:100vh;
 }
 
 .main_content_container{
+display:flex;
+flex-glow:1;
 
 }
 
 .main_content{
-
+flex-grow:2;
+padding-left: 26px;
+padding-right: 26px;
+color:#739273;
+overflow-y: scroll;
 }
 
 .flex_padding{
-
+width:20%;
+background-color:pink;
 }
